2011-08-02  Takashi Toyoshima  <toyoshim@chromium.org>

        WebSocket: Should be closed by receiving invalid continuation frame.

        https://bugs.webkit.org/show_bug.cgi?id=65527

        Reviewed by Kent Tamura.

        * http/tests/websocket/tests/hybi/invalid-continuation-expected.txt: Added.
        * http/tests/websocket/tests/hybi/invalid-continuation.html: Added.
        * http/tests/websocket/tests/hybi/invalid-continuation_wsh.py: Added.

2011-08-02  James Robinson  <jamesr@chromium.org>

        More expectation updates for r92255

        * platform/chromium/test_expectations.txt:

2011-08-02  James Robinson  <jamesr@chromium.org>

        Expectation follow-up for r92255

        * platform/chromium/test_expectations.txt:

2011-08-02  David Reveman  <reveman@chromium.org>

        [Chromium] Use edge-distance method for layer anti-aliasing.
        https://bugs.webkit.org/show_bug.cgi?id=64942

        Reviewed by James Robinson.

        Update expected results.

        * platform/chromium/test_expectations.txt:

2011-08-02  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update, gardener stuff.

        * platform/chromium/test_expectations.txt:

2011-08-02  Anders Carlsson  <andersca@apple.com>

        Add scrollbars/scrollbar-drag-thumb-with-large-content.html to the Skipped list.

        * platform/mac/Skipped:

2011-08-02  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update, gardener stuff.

        * platform/chromium/test_expectations.txt:

2011-08-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        * fast/blockflow/japanese-rl-text-with-broken-font.html:
        This test would create an empty RenderText after the change to make it asynchronous.
        Fix this by putting the script inside the head.

2011-08-02  Van Lam  <vanlam@google.com>

        --webkit-visual-word: ctrl-arrow is not able to reach the boundary of line