@@ -1,3 +1,15 @@
+2011-08-03  Takashi Toyoshima  <toyoshim@chromium.org>
+
+        WebSocket: Could not handle zero length text frame.
+        https://bugs.webkit.org/show_bug.cgi?id=65592
+
+        Reviewed by Kent Tamura.
+
+        Test: http/tests/websocket/tests/hybi/zero-length-text.html
+
+        * websockets/WebSocketChannel.cpp:
+        (WebCore::WebSocketChannel::processFrame):
+
 2011-08-02  Pratik Solanki  <psolanki@apple.com>
 
         Crash in ResourceResponse::platformCompare() with USE(CFNETWORK)
