@@ -1,3 +1,14 @@
+2011-08-03  Takashi Toyoshima  <toyoshim@chromium.org>
+
+        WebSocket: Could not handle zero length text frame.
+        https://bugs.webkit.org/show_bug.cgi?id=65592
+
+        Reviewed by Kent Tamura.
+
+        * http/tests/websocket/tests/hybi/zero-length-text-expected.txt: Added.
+        * http/tests/websocket/tests/hybi/zero-length-text.html: Added.
+        * http/tests/websocket/tests/hybi/zero-length-text_wsh.py: Added.
+
 2011-08-02  Takashi Toyoshima  <toyoshim@chromium.org>
 
         WebSocket: Should be closed by receiving invalid continuation frame.
